--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@openzeppelin/contracts": "^4.9.3",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"erc721a": "^4.2.3"
 	}
 }
