--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.1.1",
+    "alchemy-sdk": "^2.10.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
