--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^1.1.1",
     "alchemy-sdk": "^2.10.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-simple": "^0.5.6",
     "next": "13.5.4",
     "next-auth": "^4.24.3",
     "react": "^18",
